--- a/ui/src/app/semantic-search/semantic-search.component.css
+++ b/ui/src/app/semantic-search/semantic-search.component.css
@@ -1,6 +1,7 @@
 
 .annotations-container {
-  padding-top: 20px;
+  padding-top: 16px;
+  padding-bottom: 8px;
 }
 
 .annotations-list {
@@ -13,14 +14,14 @@
 
 .badge:hover {
   cursor: pointer;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 8px 0 rgba(0, 0, 0, 0.19);
 }
 
 .badge.animal {
   background-color: #FFFF8D;
 }
 
-.badge.hour {
+.badge.date {
   background-color: #FFD180;
 }
 
